--- a/server/package.json
+++ b/server/package.json
@@ -5,21 +5,26 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon api/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config jest.config.js --color=16m"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.5.14",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongodb": "^6.10.0",
     "nodemon": "^3.1.7",
     "server": "file:",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "@types/node": "^22.9.0"
+    "@types/node": "^22.9.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.2"
   }
 }
