--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon api/index.ts",
+    "dev": "nodemon --require ./src/instrumentation.ts ./api/index.ts",
     "test": "jest --config jest.config.js --color=16m"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.52.1",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.54.2",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.54.2",
+    "@opentelemetry/resources": "^1.27.0",
+    "@opentelemetry/sdk-metrics": "^1.27.0",
+    "@opentelemetry/sdk-node": "^0.54.2",
+    "@opentelemetry/semantic-conventions": "^1.27.0",
     "@types/jest": "^29.5.14",
     "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.5",
