--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://github.com/nu1lspaxe/blackjack.git",
   "license": "MIT",
   "scripts": {
+    "test": "jest --config jest.config.js --color=16m",
     "dev:build:client": "node .\\scripts\\client.build.js -w",
     "dev:build:server": "node .\\scripts\\server.build.js -w",
     "build:client": "node .\\scripts\\client.build.js -prod",
@@ -22,6 +23,7 @@
     "@opentelemetry/semantic-conventions": "^1.28.0",
     "@svgr/webpack": "^8.1.0",
     "@swc/core": "^1.9.3",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.9.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -29,12 +31,14 @@
     "@types/ws": "^8.5.13",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "serve-static": "^1.16.2",
     "swc-loader": "^0.2.6",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.7.2",
     "typescript-plugin-css-modules": "^5.1.0",
     "webpack": "^5.96.1",
