--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -10,6 +10,7 @@
         "module": "nodenext",
         "moduleResolution": "node16",
         "resolveJsonModule": true,
+        "esModuleInterop": true,
         "paths": {
             "@/*": ["./src/*"],
             "@utils": ["./src/utils/*"],
