Room join and create

--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -16,7 +16,7 @@
 
         // Environment
         "jsx": "react-jsx",
-        "lib": ["dom"],
+        "lib": ["dom", "esnext"],
         "skipLibCheck": true,
         "esModuleInterop": true,
         "importHelpers": true,
